--- a/frontend-app/html/Index.html
+++ b/frontend-app/html/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesión | Serviconli</title>
+    <title>Iniciar Sesión | Servisoft</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/frontend-app/css/login.css" />
 </head>
@@ -15,7 +15,7 @@
 
             <div class="card shadow-lg">
                 <div class="card-body">
-                    <h3 class="text-center mb-4 text-success">Central de Citas - Iniciar sesión</h3>
+                    <h3 class="text-center mb-4 text-success">Servisoft - Iniciar sesión</h3>
 
                     <div id="alertBox"></div>
 
@@ -34,7 +34,7 @@
                     </form>
 
                     <div class="text-center mt-3">
-                        <a href="index.html" class="text-decoration-none">¿No tienes cuenta? Regístrate</a>
+                            ¿No tienes cuenta? Debes solicitar una credencial
                     </div>
 
                 </div>
@@ -68,7 +68,7 @@
                 localStorage.setItem('token', data.token);
                 showAlert('¡Inicio de sesión exitoso! Redirigiendo...', 'success');
                 setTimeout(() => {
-                    window.location.href = 'Task.html'; // Página principal de tareas
+                    window.location.href = 'Main.html'; // Página principal
                 }, 1000);
             } else {
                 const data = await res.json();
