--- a/frontend-app/html/registro.html
+++ b/frontend-app/html/registro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registro | Serviconli</title>
+  <title>Registro | Servisoft</title>
   <link rel="stylesheet" href="/frontend-app/css/register.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
@@ -40,7 +40,7 @@
           </form>
 
           <div class="text-center mt-3">
-            <a href="iniciosesion.html" class="text-decoration-none">¿Ya tienes cuenta? Inicia sesión</a>
+            <a href="Index.html" class="text-decoration-none">¿Ya tienes cuenta? Inicia sesión</a>
           </div>
 
         </div>
